# Fund

./: .env  .env.backup  .env.example  .gitignore  .gitmodules  ADVANCED_IMPLEMENTATION_PLAN.md  CLEANUP_COMPLETION_REPORT.md  COMPLETE_MIGRATION_CHECKLIST.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_RTAI_LIVE_TESTING_PLAN.md  COMPREHENSIVE_RTAI_TODO.md  Dockerfile  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  PROJECT_CONTEXT_CONSOLIDATED.md  README.md  README_OLD.md  RTAI_OPTIMIZATION_COMPLETE.md  RTAI_SEQUENTIAL_PROGRESS_SUMMARY.md  deploy.ps1  deploy.sh  docker-compose.yml  pyproject.toml  pytest.ini  quick_health_check.py  requirements-dev.txt  requirements.txt  rtai_freqtrade_migration.ipynb  start_complete_system.bat  start_rtai_dashboard.py  test_complete_pipeline.py  test_indicators_real_data.py  test_optimizations.py  test_rtai_enhanced_strategy.py  test_rtai_final_validation.py  test_rtai_performance_optimization.py  test_rtai_strategy_core.py  test_unified_suite.py  verify_migration.py
.github/workflows/: ci.yml
archive/utils/: logging_legacy.py
data/: rtai_features.db
docs/: ARCHITECTURE_NEW.md
frontend/: app.js  index.html  styles.css
output/: rtai_backtest_demo.html
rtai/: __init__.py  backtesting_strategy.py  config.py  live_trader.py  main.py  signals.py  state.py  storage.py  telegram_bot.py  unified_visualizer.py
rtai/api/: server.py
rtai/indicators/: __init__.py  base.py  extremes.py  simple.py
rtai/io/: __init__.py  feeds.py  multi_stream_feed.py  rec_converter.py  recorder.py  replayer.py
rtai/sim/: __init__.py  backtester.py
rtai/state/: cache.py
rtai/storage/: __init__.py  (+1 more)
scripts/: migrate_db.py  migrate_db.sql  migrate_db_atomic.sql  migrate_db_ts_ms.py  rec_to_parquet.py  ws_health_check.py
state/: indicators.db
tests/: test_indicator_pipeline.py  test_rtai_conditions.py  test_rtai_final_integration.py  test_rtai_production.py  test_rtai_real_strategy.py  test_rtai_signal_generation.py
tools/: final_verification.py  sync_to_freqtrade.ps1  test_realtime_pipeline.py  verify_clean.py
zombie_backup/: snapshot.py.bak
zombie_backup_final/: kyle.py.bak  lpi.py.bak  ofi.py.bak  vpin.py.bak
zombie_backup_final_cleanup/: demo_rsi_pipeline.py.bak
(+11 files in other folders)
