[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rtai"
dynamic = ["version"]
description = "Real-Time Algorithmic Indicators for cryptocurrency trading"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "RTAI Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "websockets>=11.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "scipy>=1.11.0",  # For advanced statistics in extreme indicators
    "backtesting==0.3.3",  # Professional backtesting engine
    "bokeh==3.5",  # Interactive visualization
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0", 
    "black>=23.0",
]

[project.scripts]
rtai = "rtai.main:main"

[project.urls]
Homepage = "https://github.com/rtai/rtai"
Repository = "https://github.com/rtai/rtai"
Issues = "https://github.com/rtai/rtai/issues"

[tool.setuptools_scm]
write_to = "rtai/_version.py"

[tool.setuptools.packages.find]
include = ["rtai*"]
exclude = ["legacy*", "tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20", "TID252"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.flake8-tidy-imports]
banned-modules = { "matplotlib" = "Use Backtesting + Bokeh instead of Matplotlib" }

[tool.ruff.per-file-ignores]
"tests/*" = ["T20"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
